Created code CodeGenVisitor